@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class CookieInterceptor{
    +intercept() : Response
}

class ServiceCreator{
    -client : OkHttpClient
    -retrofit : Retrofit
    +createService() : xxxService
}

interface Interceptor

CookieInterceptor ..|> Interceptor
ServiceCreator ..> Interceptor

ServiceCreator ..|> OrderService
ServiceCreator ..|> DishService
ServiceCreator ..|> SuggestionService
ServiceCreator ..|> UserService

@enduml